# vueRutuber

./: .dockerignore  .env.example  .gitignore  .stylelintrc.cjs  Dockerfile  README.md  README_MICROSERVICES.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js
.github/: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  migrate_add_channel_added_at.py  migrate_playlist_channel_models.py  pyproject.toml  requirements.txt  rutube_scraper.py  seed_db.py
backend/app/: README.md  crud.py  database.py  import_rutube_data.py  main.py  migrate_existing_movies.py  migrate_playlist_channel_models.py  models.py  rutube_api_scraper.py  rutube_scraper.py  schemas.py  seed_movies.py
backend/tests/: README.md  test_crud.py  test_database.py  test_main.py
docs/: README.md  ai_developer_guide.md  documentation_rules.md  environment_variables.md  feature_added_at_display.md  feature_channel_added_at.md  feature_playlists_channels_ui.md  microservices_architecture.md  project_architecture_and_philosophy.md  qwen_coder_integration.md
docs/curriculum/: DEEP-DIVE_PROMPT.md  GLOSSARY.md  LEARNING_PLAN.md  MASTER_PROMPT.md  README.md  backend_interactive_plan.md  frontend_interactive_plan.md  js_complex_concepts.md
docs/wireframes/: README.md
e2e/: README.md  example.spec.js
src/: App.vue  README.md
src/components/: ChannelImportDialog.vue  DatabaseConnectionExample.vue  DatabaseExample.vue  Documentation.vue  (+8 more)
(+29 files in other folders)
